--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -4,7 +4,7 @@
 
   <body>
 
-    <h2 th:text="#{welcome}">Welcome from the office.</h2>
+    <h2 th:text="#{welcome from the ABQ.}">Welcome</h2>
     <div class="row">
         <div class="col-md-12">
           <img class="img-responsive" src="../static/resources/images/los-pollos-hermanos.png" th:src="@{/resources/images/los-pollos-hermanos.png}"/>
